module10/nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-for-httpserver-with-prometheus
spec:
  selector:
    app: httpserver-with-prometheus
  type: NodePort
  ports:
    - protocol: TCP
      port: 8090
