module10/prometheus-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodeport-of-prometheus
spec:
  selector:
    app: prometheus
  type: NodePort
  ports:
    - protocol: TCP
      port: 9090
